--- a/i3/config
+++ b/i3/config
@@ -13,22 +13,28 @@ set $rm HDMI-1-2
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
 
-# start a terminal. We use alacritty. 
-bindsym $mod+Return workspace $ws4; exec alacritty
+
+
 
 # Change keyboard language
 bindsym $mod+space exec "setxkbmap -query | grep -q 'layout:\s\+us' && setxkbmap es || setxkbmap us"
 #take a screenshot and copy it in clipboard
 bindsym $mod+Shift+s exec maim -s | xclip -selection clipboard -t image/png
-# start discord in workspace 8
+
+# start a terminal. We use alacritty. 
+# lauch apps in workspaces 1-3
+bindsym $mod+e workspace $ws2; exec thunar
+bindsym $mod+t workspace $ws3; exec telegram-desktop
+# lauch apps in workspaces 4-6
+bindsym $mod+Return workspace $ws4; exec alacritty
+bindsym $mod+g workspace $ws5; exec firefox 
+# lauch apps in workspaces 7-9
+bindsym $mod+c workspace $ws7; exec code-oss
 bindsym $mod+d workspace $ws8; exec discord
-bindsym $mod+t workspace $ws6; exec telegram-desktop
+bindsym $mod+s workspace $ws9; exec spotify-launcher
 
 # kill focused window
 bindsym $mod+q kill
-
-# Open thunar
-bindsym $mod+e workspace $ws5; exec thunar
 
 # start dmenu (a program launcher).
 #bindsym $mod+d exec --no-startup-id dmenu_run
@@ -275,8 +281,7 @@ bindsym $mod+r mode "resize"
 # defined keybinding, on a certain workspace, without
 # touching program launcher. Assign Programs to respective
 # workspaces.
-bindsym $mod+g workspace $ws1; exec firefox
-bindsym $mod+c workspace $ws7; exec code-oss
+
 
 #Multi Monitor (Dual Monitor, extended monitor)
 #Replace HDMI2 with DVI-2, VGA-2, DP-2, DVI-2 etc. Get value by typing xrandr in the terminal.
